All change, request sql article_vendu, delete file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,7 @@
 spring.application.name=projet.spring
 
+spring.datasource.url=jdbc:mariadb://localhost:3306/enchere?integratedSecurity=false&encrypt=false&trustServerCertificate=false
+spring.datasource.username=root
+spring.datasource.password=root
 
-#Connexion à la base de données
-spring.datasource.url=jdbc:sqlserver://localhost;databasename=projet_enchere;integratedSecurity=false;encrypt=false;trustServerCertificate=false
-spring.datasource.username=sa
-spring.datasource.password=Passw0rd
-
-#affiche les requêtes sql généré
-spring.jpa.show-sql=true
-
-# 2 options create et update
-# create recré les tables et détruit les tuples (enregistrement, ligne)
-spring.jpa.hibernate.ddl-auto=update
-
-spring.profiles.active=prod
+server.servlet.session.timeout=5m
